--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 :root {
-  --blue: #5599f2;
+  --white: #fff;
+  --black: #06283D;
+  --blue: #1263DF;
+  --light-blue: #47B5FF;
+  --sky-blue: #DFF6FF;
 }
 
 * {
@@ -8,6 +12,10 @@
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 62.5%;
+}
+
+body {
+  background-color: #eee;
 }
 
 h1 {
