--- a/widgets/ContactSection/index.module.css
+++ b/widgets/ContactSection/index.module.css
@@ -1,23 +1,28 @@
 .contact_section {
-  width: 100%;
-  padding: 4rem 0;
+  background-color: transparent;
   display: flex;
   flex-flow: column wrap;
+  width: 100%;
+  align-items: center;
+  padding: 4rem 0;
+}
+
+.contact_section_wrapper {
+  display: flex;
+  flex-flow: column wrap;
+  width: 90%;
   align-items: center;
   gap: 2rem;
-  background-color: transparent;
 }
 
 .contact_section_title {
-  width: 90%;
+  width: 100%;
   text-align: flex-start;
   color: var(--secondary);
-  text-decoration: underline;
-  text-decoration-color: var(--terciary);
 }
 
 .contact_list {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -27,4 +32,11 @@
 .contact_icon {
   font-size: 4rem;
   color: var(--primary);
+}
+
+@media (min-width: 1025px) {
+  .contact_section_wrapper {
+    width: 40%;
+  }
+
 }
