--- a/widgets/LandingSection/index.module.css
+++ b/widgets/LandingSection/index.module.css
@@ -26,3 +26,16 @@
   flex-flow: column wrap;
   gap: 1rem;
 }
+
+
+@media (min-width: 1025px) {
+
+  .card {
+    width: 40%;
+  }  
+  
+  .action_area {
+    flex-flow: row wrap;
+    gap: 2rem;
+  }
+}
