--- a/widgets/MobileMenu/index.module.css
+++ b/widgets/MobileMenu/index.module.css
@@ -1,20 +1,18 @@
 .mobile_menu {
-  width: 100%;
-  height: 100vh;
   position: fixed;
-  top: 0;
+  top: 0%;
   left: -100%;
-  background-color: rgba(255, 255, 255, .75);  
-  backdrop-filter: blur(5px);
+  bottom: 0;
+  right: 100%;
+  background-color: var(--white);
   z-index: 999;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
-  display: none;
+  display: hidden;
   transition: all .2s;
 }
 
 .mobile_menu_content {
+  position: absolute;
+  top: 20%;
   width: 100%;
   display: flex;
   flex-flow: column wrap;
@@ -24,13 +22,28 @@
 .link_button {
   border: 0;
   padding: 2rem;
-  width: 50%;
   background-color: transparent;
-  color: var(--primary);
   font-weight: bold;
+  color: var(--secondary);
+  text-decoration: underline;
+  text-decoration-color: var(--terciary);
+  font-size: 3rem;
+
+}
+
+.link_button:hover {
+  text-decoration-color: var(--secondary);
 }
 
 .open {
   display: flex;
-  left: 0%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@media (min-width: 1025px) {
+  .open {
+    right: 50%;
+  }
 }
