--- a/components/Button/index.module.css
+++ b/components/Button/index.module.css
@@ -35,7 +35,7 @@
 
 .outlined {
   color: var(--primary);
-  background-color: var(--white);
+  background-color: transparent;
 }
 
 .full_width {
@@ -84,5 +84,14 @@
     border-right-color: var(--terciary);
     border-bottom-color: var(--terciary);
     
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .outlined {
+    color: var(--white);
+  }
+  .button:hover {
+    color: var(--white);
   }
 }
