--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,3 +69,11 @@ span {
   border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: .5rem;
 }
+
+@media (prefers-color-scheme: dark) {
+
+  body {
+    color: var(--white);
+    background-color: var(--black);
+  }
+}
