--- a/widgets/ContactSection/index.module.css
+++ b/widgets/ContactSection/index.module.css
@@ -34,6 +34,13 @@
   color: var(--primary);
 }
 
+@media (prefers-color-scheme: dark) {
+  .contact_icon {
+    font-size: 4rem;
+    color: var(--white);
+  }
+}
+
 @media (min-width: 1025px) {
   .contact_section_wrapper {
     width: 40%;
