--- a/widgets/SkillsSection/SkillsAccordion.module.css
+++ b/widgets/SkillsSection/SkillsAccordion.module.css
@@ -41,6 +41,7 @@
   flex-flow: row wrap;
   gap: 1rem;
   width: 80%;
+  color: var(--secondary);
 }
 
 .more_skill_button_text {
@@ -78,6 +79,17 @@
 
 .more_skills_tab_description.more_skills_tab_selected {
   display: flex;
+}
+
+@media (prefers-color-scheme: dark) {
+
+  .more_skill_button_icon {
+    color: var(--white);
+  }
+
+  .more_skills_tab_description {
+    color: var(--white);
+  }
 }
 
 @media (min-width: 1025px) {
